# micept

./: README.md  README_FRONTEND_REFACTOR.md  README_REFACTOR.md  build-optimized.md  index.html  package.json  performance-optimization.md  pnpm-lock.yaml  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  background.rs  commands.rs  config.rs  lcu.rs  lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/core/: background.rs  mod.rs  state.rs
src-tauri/src/lol/: client.rs  mod.rs
src-tauri/src/ui/: mod.rs  tray.rs  window.rs
src-tauri/src/utils/: config.rs  mod.rs
src/components/: AvatarSection.tsx  InfoPanel.tsx  StatusBar.tsx  index.ts
src/hooks/: useAppState.ts
src/styles/: components.css  status-indicators.css
src/types/: index.ts
src/utils/: gameflow.ts  index.ts
