[package]
name = "micept"
version = "0.1.0"
description = "Micept: Auto-accept League of Legends matches, developed by mirakyux"
authors = ["mirakyux"]
edition = "2021"

[[bin]]
name = "micept"
path = "src/main.rs"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "micept_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.21"
dirs = "5.0"

# Windows API 相关依赖
[target.'cfg(windows)'.dependencies]
is_elevated = "0.1.2"
runas = "1.1.0"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "z" # Optimize for size (more aggressive than "s")
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
overflow-checks = false # Disable overflow checks for smaller size
debug = false # Disable debug info completely
rpath = false # Disable rpath for smaller size
